// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink render as email 1`] = `
<a
  class="nav-link external"
  href="mailto:abc@google.com"
>
  
  email
  
  <outboundlink-stub />
</a>
`;

exports[`NavLink render as external link 1`] = `
<a
  class="nav-link external"
  href="https://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  
  external link
  
  <outboundlink-stub />
</a>
`;

exports[`NavLink render as link with locales 1`] = `
<router-link-stub
  class="nav-link"
  to="/"
>
  English
</router-link-stub>
`;

exports[`NavLink render as tel 1`] = `
<a
  class="nav-link external"
  href="tel:1778901652"
>
  
  tel
  
  <outboundlink-stub />
</a>
`;
